// åŠå…¬æ¡Œé£æ°´åˆ†æ - å‰ç«¯äº¤äº’è„šæœ¬

class DeskFengshuiAnalyzer {
    constructor() {
        this.apiBaseUrl = window.API_BASE_URL || 'http://localhost:8001';
        this.selectedImage = null;
        
        this.init();
    }
    
    init() {
        // ç»‘å®šäº‹ä»¶
        this.bindEvents();
        
        console.log('âœ… åŠå…¬æ¡Œé£æ°´åˆ†æå™¨åˆå§‹åŒ–æˆåŠŸ');
    }
    
    bindEvents() {
        // ä¸Šä¼ åŒºåŸŸç‚¹å‡»
        const uploadArea = document.getElementById('uploadArea');
        const imageInput = document.getElementById('imageInput');
        
        uploadArea.addEventListener('click', (e) => {
            if (!e.target.closest('.btn-remove')) {
                imageInput.click();
            }
        });
        
        // æ–‡ä»¶é€‰æ‹©
        imageInput.addEventListener('change', (e) => {
            this.handleFileSelect(e);
        });
        
        // æ‹–æ‹½ä¸Šä¼ 
        uploadArea.addEventListener('dragover', (e) => {
            e.preventDefault();
            uploadArea.classList.add('dragover');
        });
        
        uploadArea.addEventListener('dragleave', () => {
            uploadArea.classList.remove('dragover');
        });
        
        uploadArea.addEventListener('drop', (e) => {
            e.preventDefault();
            uploadArea.classList.remove('dragover');
            
            const files = e.dataTransfer.files;
            if (files.length > 0) {
                this.loadImage(files[0]);
            }
        });
        
        // åˆ é™¤å›¾ç‰‡
        document.getElementById('btnRemove').addEventListener('click', (e) => {
            e.stopPropagation();
            this.removeImage();
        });
        
        // å…«å­—å¼€å…³
        const useBazi = document.getElementById('useBazi');
        const baziForm = document.getElementById('baziForm');
        
        useBazi.addEventListener('change', () => {
            baziForm.style.display = useBazi.checked ? 'block' : 'none';
        });
        
        // åˆ†ææŒ‰é’®
        document.getElementById('btnAnalyze').addEventListener('click', () => {
            this.analyze();
        });
    }
    
    handleFileSelect(e) {
        const files = e.target.files;
        if (files.length > 0) {
            this.loadImage(files[0]);
        }
    }
    
    loadImage(file) {
        // éªŒè¯æ–‡ä»¶ç±»å‹
        if (!file.type.startsWith('image/')) {
            alert('è¯·ä¸Šä¼ å›¾ç‰‡æ–‡ä»¶');
            return;
        }
        
        // éªŒè¯æ–‡ä»¶å¤§å°ï¼ˆæœ€å¤§10MBï¼‰
        if (file.size > 10 * 1024 * 1024) {
            alert('å›¾ç‰‡æ–‡ä»¶ä¸èƒ½è¶…è¿‡10MB');
            return;
        }
        
        this.selectedImage = file;
        
        // æ˜¾ç¤ºé¢„è§ˆ
        const reader = new FileReader();
        reader.onload = (e) => {
            document.getElementById('previewImage').src = e.target.result;
            document.querySelector('.upload-prompt').style.display = 'none';
            document.getElementById('preview').style.display = 'block';
            document.getElementById('btnAnalyze').disabled = false;
        };
        reader.readAsDataURL(file);
    }
    
    removeImage() {
        this.selectedImage = null;
        document.getElementById('imageInput').value = '';
        document.getElementById('previewImage').src = '';
        document.querySelector('.upload-prompt').style.display = 'block';
        document.getElementById('preview').style.display = 'none';
        document.getElementById('btnAnalyze').disabled = true;
        document.getElementById('resultSection').style.display = 'none';
    }
    
    // å°†æ–‡ä»¶è½¬æ¢ä¸º base64
    fileToBase64(file) {
        return new Promise((resolve, reject) => {
            const reader = new FileReader();
            reader.onload = () => {
                // è¿”å› base64 å­—ç¬¦ä¸²ï¼ˆåŒ…å« data:image/xxx;base64, å‰ç¼€ï¼‰
                resolve(reader.result);
            };
            reader.onerror = reject;
            reader.readAsDataURL(file);
        });
    }
    
    async analyze() {
        if (!this.selectedImage) {
            alert('è¯·å…ˆä¸Šä¼ ç…§ç‰‡');
            return;
        }
        
        const useBazi = document.getElementById('useBazi').checked;
        
        if (useBazi) {
            const solarDate = document.getElementById('solarDate').value;
            const solarTime = document.getElementById('solarTime').value;
            const gender = document.getElementById('gender').value;
            
            if (!solarDate || !solarTime) {
                alert('è¯·å¡«å†™å®Œæ•´çš„å…«å­—ä¿¡æ¯');
                return;
            }
        }
        
        // æ˜¾ç¤ºåŠ è½½çŠ¶æ€
        this.setLoading(true);
        
        try {
            // å°†æ–‡ä»¶è½¬æ¢ä¸º base64
            const imageBase64 = await this.fileToBase64(this.selectedImage);
            
            // æ„å»ºè¯·æ±‚æ•°æ®
            const requestData = {
                image_base64: imageBase64,
                filename: this.selectedImage.name,
                content_type: this.selectedImage.type || 'image/jpeg',
                use_bazi: useBazi
            };
            
            if (useBazi) {
                requestData.solar_date = document.getElementById('solarDate').value;
                requestData.solar_time = document.getElementById('solarTime').value;
                requestData.gender = document.getElementById('gender').value;
            }
            
            console.log('ä½¿ç”¨ gRPC-Web è°ƒç”¨åŠå…¬æ¡Œé£æ°´åˆ†ææ¥å£');
            console.log('è¯·æ±‚æ•°æ®:', { 
                has_image: !!requestData.image_base64, 
                filename: requestData.filename,
                use_bazi: requestData.use_bazi 
            });
            
            // ä½¿ç”¨ gRPC-Web è°ƒç”¨
            const result = await api.post('/api/v2/desk-fengshui/analyze', requestData);
            
            // å®‰å…¨åœ°æ‰“å°ç»“æœï¼ˆé¿å…å¾ªç¯å¼•ç”¨å¯¼è‡´ Maximum call stack exceededï¼‰
            try {
                console.log('åˆ†æç»“æœ:', JSON.parse(JSON.stringify(result)));
            } catch (e) {
                console.log('åˆ†æç»“æœ: success =', result?.success);
            }
            
            if (result && result.success) {
                this.displayResult(result.data);
            } else {
                throw new Error(result?.error || result?.detail || 'åˆ†æå¤±è´¥');
            }
            
        } catch (error) {
            console.error('åˆ†æå¤±è´¥:', error);
            console.error('é”™è¯¯å †æ ˆ:', error.stack);
            const errorMsg = error.message || 'æœªçŸ¥é”™è¯¯';
            alert(`åˆ†æå¤±è´¥: ${errorMsg}\nè¯·æ£€æŸ¥æµè§ˆå™¨æ§åˆ¶å°è·å–è¯¦ç»†ä¿¡æ¯`);
        } finally {
            this.setLoading(false);
        }
    }
    
    setLoading(loading) {
        const btnAnalyze = document.getElementById('btnAnalyze');
        const btnText = btnAnalyze.querySelector('.btn-text');
        const btnLoading = btnAnalyze.querySelector('.btn-loading');
        
        if (loading) {
            btnText.style.display = 'none';
            btnLoading.style.display = 'inline-flex';
            btnAnalyze.disabled = true;
        } else {
            btnText.style.display = 'inline';
            btnLoading.style.display = 'none';
            btnAnalyze.disabled = false;
        }
    }
    
    displayResult(data) {
        // æ˜¾ç¤ºç»“æœåŒºåŸŸ
        document.getElementById('resultSection').style.display = 'block';
        
        // æ»šåŠ¨åˆ°ç»“æœåŒºåŸŸ
        setTimeout(() => {
            document.getElementById('resultSection').scrollIntoView({ 
                behavior: 'smooth',
                block: 'start'
            });
        }, 100);
        
        // æ˜¾ç¤ºè­¦å‘Šä¿¡æ¯ï¼ˆå¦‚æœæœ‰ï¼‰
        if (data.warning) {
            this.displayWarning(data.warning);
        }
        
        // æ˜¾ç¤ºè¯„åˆ†
        this.displayScore(data.score, data.summary);
        
        // æ˜¾ç¤ºå…«å­—ä¿¡æ¯
        if (data.xishen || data.jishen) {
            document.getElementById('baziInfo').style.display = 'block';
            document.getElementById('xishen').textContent = data.xishen || '-';
            document.getElementById('jishen').textContent = data.jishen || '-';
        } else {
            document.getElementById('baziInfo').style.display = 'none';
        }
        
        // æ˜¾ç¤ºæ£€æµ‹åˆ°çš„ç‰©å“
        this.displayItems(data.items || []);
        
        // æ˜¾ç¤ºç‰©å“ä½ç½®å¯è§†åŒ–ï¼ˆå¦‚æœæœ‰ç‰©å“ï¼‰
        if (data.items && data.items.length > 0) {
            this.displayItemsVisualization(data.items);
        }
        
        // æ˜¾ç¤ºè°ƒæ•´å»ºè®®
        this.displaySuggestions('adjustments', data.adjustments || []);
        
        // æ˜¾ç¤ºå¢åŠ å»ºè®®ï¼ˆä¼˜å…ˆä½¿ç”¨åˆ†ç±»å±•ç¤ºï¼‰
        if (data.categorized_additions && Object.keys(data.categorized_additions).length > 0) {
            this.displayCategorizedSuggestions(data.categorized_additions);
            // éšè—ä¼ ç»Ÿçš„additionsåˆ—è¡¨
            document.getElementById('additionsList').style.display = 'none';
        } else {
            this.displaySuggestions('additions', data.additions || []);
            document.getElementById('categorizedSuggestions').style.display = 'none';
        }
        
        // æ˜¾ç¤ºåˆ é™¤å»ºè®®
        this.displaySuggestions('removals', data.removals || []);
        
        // æ˜¾ç¤ºç»Ÿè®¡æ•°æ®ï¼ˆå¦‚æœæœ‰ï¼‰
        if (data.statistics) {
            this.displayStatistics(data.statistics);
        }
    }
    
    displayWarning(warning) {
        // åœ¨ç»“æœåŒºåŸŸé¡¶éƒ¨æ˜¾ç¤ºè­¦å‘Š
        const resultSection = document.getElementById('resultSection');
        const existingWarning = resultSection.querySelector('.warning-banner');
        if (existingWarning) {
            existingWarning.remove();
        }
        
        const warningDiv = document.createElement('div');
        warningDiv.className = 'warning-banner';
        warningDiv.innerHTML = `
            <div style="background: #fff3cd; border: 2px solid #ffc107; border-radius: 10px; padding: 15px; margin-bottom: 20px;">
                <div style="display: flex; align-items: center; gap: 10px;">
                    <span style="font-size: 24px;">âš ï¸</span>
                    <div>
                        <strong style="color: #856404;">æ£€æµ‹åŠŸèƒ½å—é™</strong>
                        <p style="margin: 5px 0 0 0; color: #856404;">
                            ${warning}<br>
                            <small>å»ºè®®è”ç³»ç®¡ç†å‘˜å®‰è£…YOLOæ¨¡å‹ä»¥è·å¾—æ›´å‡†ç¡®çš„ç‰©å“æ£€æµ‹ã€‚<br>
                            å½“å‰ç³»ç»Ÿä»ä¼šæ ¹æ®é£æ°´åŸç†ä¸ºæ‚¨æä¾›å®Œæ•´çš„å¸ƒå±€å»ºè®®ã€‚</small>
                        </p>
                    </div>
                </div>
            </div>
        `;
        
        resultSection.insertBefore(warningDiv, resultSection.firstChild);
    }
    
    displayScore(score, summary) {
        // æ›´æ–°è¯„åˆ†æ•°å­—
        const scoreValue = document.getElementById('scoreValue');
        this.animateNumber(scoreValue, 0, score, 1000);
        
        // æ›´æ–°è¿›åº¦åœ†ç¯
        const scoreCircle = document.getElementById('scoreCircle');
        const circumference = 408; // 2 * Ï€ * r (r=65)
        const offset = circumference - (score / 100) * circumference;
        scoreCircle.style.strokeDashoffset = offset;
        
        // æ ¹æ®åˆ†æ•°è®¾ç½®é¢œè‰²
        if (score >= 90) {
            scoreCircle.style.stroke = '#4caf50';
        } else if (score >= 75) {
            scoreCircle.style.stroke = '#2196f3';
        } else if (score >= 60) {
            scoreCircle.style.stroke = '#ff9800';
        } else {
            scoreCircle.style.stroke = '#f44336';
        }
        
        // æ›´æ–°æ€»ç»“
        document.getElementById('scoreDescription').textContent = summary;
        
        // æ›´æ–°æ ‡é¢˜
        let level = 'ä¸€èˆ¬';
        if (score >= 90) level = 'ä¼˜ç§€';
        else if (score >= 75) level = 'è‰¯å¥½';
        else if (score < 60) level = 'å¾…æ”¹å–„';
        
        document.getElementById('scoreSummary').textContent = `åŠå…¬æ¡Œé£æ°´å¸ƒå±€ï¼š${level}`;
    }
    
    animateNumber(element, start, end, duration) {
        const range = end - start;
        const increment = range / (duration / 16);
        let current = start;
        
        const timer = setInterval(() => {
            current += increment;
            if ((increment > 0 && current >= end) || (increment < 0 && current <= end)) {
                current = end;
                clearInterval(timer);
            }
            element.textContent = Math.round(current);
        }, 16);
    }
    
    displayItems(items) {
        const grid = document.getElementById('itemsGrid');
        grid.innerHTML = '';
        
        if (items.length === 0) {
            grid.innerHTML = '<p style="color: #999;">æœªæ£€æµ‹åˆ°ç‰©å“</p>';
            return;
        }
        
        items.forEach(item => {
            const position = item.position || {};
            const itemEl = document.createElement('div');
            itemEl.className = 'item-tag';
            itemEl.innerHTML = `
                <div class="item-name">${item.label}</div>
                <div class="item-position">${position.relative_name || 'æœªçŸ¥ä½ç½®'}</div>
                <div class="item-position" style="font-size: 0.8em; color: #999;">
                    ${position.bagua_name || ''}
                </div>
            `;
            grid.appendChild(itemEl);
        });
    }
    
    displayItemsVisualization(items) {
        const itemsCard = document.querySelector('.items-card');
        if (!itemsCard) return;
        
        // æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨å¯è§†åŒ–
        let existingViz = document.getElementById('itemsVisualization');
        if (existingViz) {
            existingViz.remove();
        }
        
        const vizDiv = document.createElement('div');
        vizDiv.id = 'itemsVisualization';
        vizDiv.className = 'items-visualization';
        vizDiv.innerHTML = `
            <h4 style="margin-bottom: 15px; color: #333;">ğŸ“ ç‰©å“ä½ç½®åˆ†å¸ƒå›¾</h4>
            <div class="desk-layout" id="deskLayout"></div>
        `;
        
        itemsCard.appendChild(vizDiv);
        
        // ç»˜åˆ¶ç‰©å“ä½ç½®
        const layout = document.getElementById('deskLayout');
        items.forEach((item, index) => {
            const position = item.position || {};
            const relative = position.relative || 'center';
            const vertical = position.vertical || 'center';
            
            // æ ¹æ®ä½ç½®åˆ›å»ºæ ‡è®°ç‚¹
            const marker = document.createElement('div');
            marker.className = 'item-marker';
            marker.style.position = 'absolute';
            marker.style.width = '30px';
            marker.style.height = '30px';
            marker.style.borderRadius = '50%';
            marker.style.background = '#667eea';
            marker.style.border = '2px solid white';
            marker.style.display = 'flex';
            marker.style.alignItems = 'center';
            marker.style.justifyContent = 'center';
            marker.style.color = 'white';
            marker.style.fontSize = '0.8em';
            marker.style.fontWeight = 'bold';
            marker.style.boxShadow = '0 2px 8px rgba(0,0,0,0.3)';
            marker.style.cursor = 'pointer';
            marker.textContent = index + 1;
            marker.title = `${item.label} - ${position.relative_name || relative}`;
            
            // è®¡ç®—ä½ç½®
            let left = 50, top = 50;
            if (relative === 'left') left = 20;
            else if (relative === 'right') left = 80;
            
            if (vertical === 'front') top = 20;
            else if (vertical === 'back') top = 80;
            
            marker.style.left = `${left}%`;
            marker.style.top = `${top}%`;
            marker.style.transform = 'translate(-50%, -50%)';
            
            layout.appendChild(marker);
        });
        
        // æ·»åŠ å›¾ä¾‹
        const legend = document.createElement('div');
        legend.style.marginTop = '15px';
        legend.style.display = 'flex';
        legend.style.gap = '15px';
        legend.style.flexWrap = 'wrap';
        legend.style.justifyContent = 'center';
        legend.innerHTML = `
            <div style="display: flex; align-items: center; gap: 5px;">
                <div style="width: 12px; height: 12px; background: #4caf50; border-radius: 50%;"></div>
                <span style="font-size: 0.9em;">é’é¾™ä½ï¼ˆå·¦ä¾§ï¼‰</span>
            </div>
            <div style="display: flex; align-items: center; gap: 5px;">
                <div style="width: 12px; height: 12px; background: #ff9800; border-radius: 50%;"></div>
                <span style="font-size: 0.9em;">ç™½è™ä½ï¼ˆå³ä¾§ï¼‰</span>
            </div>
            <div style="display: flex; align-items: center; gap: 5px;">
                <div style="width: 12px; height: 12px; background: #e91e63; border-radius: 50%;"></div>
                <span style="font-size: 0.9em;">æœ±é›€ä½ï¼ˆå‰æ–¹ï¼‰</span>
            </div>
            <div style="display: flex; align-items: center; gap: 5px;">
                <div style="width: 12px; height: 12px; background: #00bcd4; border-radius: 50%;"></div>
                <span style="font-size: 0.9em;">ç„æ­¦ä½ï¼ˆåæ–¹ï¼‰</span>
            </div>
        `;
        vizDiv.appendChild(legend);
    }
    
    displaySuggestions(type, suggestions) {
        const cardId = type === 'adjustments' ? 'adjustmentsCard' :
                      type === 'additions' ? 'additionsCard' : 'removalsCard';
        const listId = type === 'adjustments' ? 'adjustmentsList' :
                      type === 'additions' ? 'additionsList' : 'removalsList';
        
        const card = document.getElementById(cardId);
        const list = document.getElementById(listId);
        
        if (suggestions.length === 0) {
            card.style.display = 'none';
            return;
        }
        
        card.style.display = 'block';
        list.innerHTML = '';
        
        suggestions.forEach(sugg => {
            const priority = sugg.priority || 'low';
            const item = document.createElement('div');
            item.className = `suggestion-item priority-${priority}`;
            
            let content = '';
            
            if (type === 'adjustments') {
                content = `
                    <div class="suggestion-header">
                        <span class="suggestion-title">${sugg.item_label || sugg.item}</span>
                        <span class="suggestion-badge badge-${priority}">
                            ${priority === 'high' ? 'é«˜ä¼˜å…ˆçº§' : priority === 'medium' ? 'ä¸­ä¼˜å…ˆçº§' : 'ä½ä¼˜å…ˆçº§'}
                        </span>
                    </div>
                    <div class="suggestion-detail">
                        å½“å‰ä½ç½®ï¼š${sugg.current_position} â†’ å»ºè®®ä½ç½®ï¼š${sugg.ideal_position}
                    </div>
                    <div class="suggestion-reason">${sugg.reason}</div>
                `;
            } else if (type === 'additions') {
                // æ£€æŸ¥æ˜¯å¦æ˜¯å–œç¥å»ºè®®
                const isXishen = sugg.is_xishen || sugg.reason?.includes('å–œç¥') || sugg.reason?.includes('ğŸŒŸ');
                const xishenClass = isXishen ? 'xishen-suggestion' : '';
                const badgeText = isXishen ? 'ğŸŒŸ å–œç¥ä¸“å±' : (sugg.element ? `äº”è¡Œï¼š${sugg.element}` : 'å»ºè®®');
                
                content = `
                    <div class="suggestion-header ${xishenClass}">
                        <span class="suggestion-title">å»ºè®®å¢åŠ ï¼š${sugg.item_label || sugg.item}</span>
                        <span class="suggestion-badge badge-${priority} ${isXishen ? 'badge-xishen' : ''}">
                            ${badgeText}
                        </span>
                    </div>
                    <div class="suggestion-detail">
                        å»ºè®®ä½ç½®ï¼š${sugg.ideal_position || sugg.position}
                    </div>
                    <div class="suggestion-reason ${xishenClass}">${sugg.reason || sugg.suggestion || ''}</div>
                `;
            } else {
                content = `
                    <div class="suggestion-header">
                        <span class="suggestion-title">${sugg.item_label || sugg.item}</span>
                        <span class="suggestion-badge badge-high">ä¸å®œæ‘†æ”¾</span>
                    </div>
                    <div class="suggestion-detail">
                        å½“å‰ä½ç½®ï¼š${sugg.current_position}
                    </div>
                    <div class="suggestion-reason">${sugg.reason}</div>
                `;
            }
            
            item.innerHTML = content;
            list.appendChild(item);
        });
    }
}

// é¡µé¢åŠ è½½å®Œæˆååˆå§‹åŒ–
document.addEventListener('DOMContentLoaded', () => {
    new DeskFengshuiAnalyzer();
});

